<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pointshop.renew.ui.ShoppingCartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_shopping_cart"
            app:layout_constraintBottom_toTopOf="@id/footerView"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/footerView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_150"
            app:layout_constraintBottom_toBottomOf="parent">

            <CheckBox
                android:id="@+id/cbAgree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:button="@drawable/selector_cash"
                android:checked="true"
                app:layout_constraintBottom_toTopOf="@id/btnContinueShopping"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtTerms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cart_terms"
                android:textColor="@color/black"
                android:layout_marginStart="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/cbAgree"
                app:layout_constraintBottom_toBottomOf="@id/cbAgree"
                app:layout_constraintStart_toEndOf="@id/cbAgree"/>

            <Button
                android:id="@+id/btnContinueShopping"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/shape_round_white"
                android:elevation="1dp"
                android:visibility="gone"
                android:text="@string/continue_shopping"
                android:textColor="@color/typeRed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/verticalGuideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cbAgree" />

            <Button
                android:id="@+id/btnBuy"
                android:layout_width="0dp"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/shape_round_red"
                android:elevation="1dp"
                android:text="@string/go_to_checkout"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/verticalGuideline"
                app:layout_constraintTop_toBottomOf="@id/cbAgree" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/typeRed"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>