<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pointshop.renew.ui.PointShopItemFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/ivItem"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:contentDescription="@string/loading_fail"
                    android:src="@color/lightGray"
                    app:layout_constraintDimensionRatio="1:0.7"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/ivItem"
                    tools:text="起司蛋糕" />

                <TextView
                    android:id="@+id/txtItemFee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/txtItemName"
                    tools:text="NT$500" />

                <View
                    android:id="@+id/view"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_radius_line_red"
                    app:layout_constraintStart_toStartOf="@+id/txtItemFee"
                    app:layout_constraintTop_toBottomOf="@+id/txtItemFee" />

                <ImageButton
                    android:id="@+id/ibSub"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="4dp"
                    android:background="#0000"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_sub_circle"
                    app:layout_constraintBottom_toBottomOf="@+id/view"
                    app:layout_constraintStart_toStartOf="@+id/view"
                    app:layout_constraintTop_toTopOf="@+id/view" />

                <TextView
                    android:id="@+id/txtCount"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/view"
                    app:layout_constraintEnd_toStartOf="@+id/ibPlus"
                    app:layout_constraintStart_toEndOf="@+id/ibSub"
                    app:layout_constraintTop_toTopOf="@+id/view" />

                <ImageButton
                    android:id="@+id/ibPlus"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="4dp"
                    android:background="#0000"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_add_circle"
                    app:layout_constraintBottom_toBottomOf="@+id/view"
                    app:layout_constraintEnd_toEndOf="@+id/view"
                    app:layout_constraintTop_toTopOf="@+id/view" />

                <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/product＿description"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/view" />

                <TextView
                    android:id="@+id/txtProductDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:text="安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安安"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/text" />

                <Button
                    android:id="@+id/btnAddCart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/shape_round_white"
                    android:elevation="1dp"
                    android:text="@string/add_cart"
                    android:visibility="gone"
                    android:textColor="@color/typeRed"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/verticalGuideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtProductDescription" />

                <Button
                    android:id="@+id/btnBuy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/shape_round_red"
                    android:elevation="1dp"
                    android:text="@string/buy_now"
                    android:visibility="gone"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/verticalGuideline"
                    app:layout_constraintTop_toBottomOf="@id/txtProductDescription" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/verticalGuideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/typeRed"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>